fixed spacing

--- a/css/modules/navigation__desktop.css
+++ b/css/modules/navigation__desktop.css
@@ -9,14 +9,8 @@
 .navigation__desktop-menu a {
 	text-decoration: none;
 	color: inherit;
-	transition: all 300ms ease-in-out;
 }
 
 .navigation__desktop-menu a:hover {
 	border-bottom: 0.05rem solid;
 }
-
-.navigation__desktop-menu li {
-	padding-bottom: 0.5rem;
-}
-
